# gemini-ai-chatbot

./: README.md  pyproject.toml
backend/: app.py  requirements.txt
frontend/: package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/: App.css  App.jsx
frontend/src/components/: ConversationDisplayArea.jsx  Header.jsx  MessageInput.jsx
